Fix collapsing of form elements
Fix #76, #89

--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -52,7 +52,7 @@ input[readonly] {
 .form-inline {
   margin-bottom: 0;
 
-  > label {
+  label {
     display: inline-block;
   }
 
@@ -62,16 +62,20 @@ input[readonly] {
 }
 
 .form-stacked {
-  > label {
+  label {
     display: block;
     margin-bottom: $spacing-unit / 3;
   }
 
-  > label + input,
-  > label + select,
-  > label + textarea,
-  > label:not([for]) {
+  label + input,
+  label + select,
+  label + textarea,
+  label:not([for]) {
     margin-bottom: $spacing-unit;
+  }
+
+  button {
+    display: inline-block;
   }
 }
 
@@ -79,7 +83,7 @@ input[readonly] {
   .form-item {
     margin-bottom: $spacing-unit;
 
-    > label {
+    label {
       display: inline-block;
       width: 25%;
       margin: 0;
@@ -92,8 +96,12 @@ input[readonly] {
     margin-left: 25%;
     padding-left: $spacing-unit / 4;
 
-    > label {
+    label {
       margin-bottom: $spacing-unit;
     }
+  }
+
+  button {
+    display: inline-block;
   }
 }
